Incorporación de autenticación de API con Microsoft Entra ID

--- a/src/guides/external-app-integration/EmployeeOnboarding.Web/appsettings.json
+++ b/src/guides/external-app-integration/EmployeeOnboarding.Web/appsettings.json
@@ -6,8 +6,18 @@
     }
   },
   "AllowedHosts": "*",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "",
+    "ClientId": "",
+    "ClientSecret": "",
+    "CallbackPath": "/signin-oidc"
+  },
+  "ElsaBackend": {
+    "Scopes": [ "api://0000-0000-0000/ApiAccess" ],
+    "BaseUrl": "api://0000-0000-0000"
+  },
   "Elsa": {
-    "ServerUrl": "https://localhost:5001/elsa/api",
-    "ApiKey": "00000000-0000-0000-0000-000000000000"
+    "ServerUrl": "https://localhost:5001/elsa/api"
   }
 }
