--- a/src/guides/external-app-integration/EmployeeOnboarding.Web/EmployeeOnboarding.Web.csproj
+++ b/src/guides/external-app-integration/EmployeeOnboarding.Web/EmployeeOnboarding.Web.csproj
@@ -7,14 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Elsa.EntityFrameworkCore" Version="3.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
+	  <PackageReference Include="Microsoft.Identity.Web" Version="3.3.1" />
+	  <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.3.1" />
+	  <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="3.3.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\workflows-core\src\modules\Elsa.EntityFrameworkCore\Elsa.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
 </Project>
